force-app/main/default/objects/Amplifinity_AR_Status_Mapping__mdt/Amplifinity_AR_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>used to map the AR Status on the Payx Referral to the appropriate AMP status on the AMP Referral</description>
    <label>Amplifinity AR Status Mapping</label>
    <pluralLabel>Amplifinity AR Status Mappings</pluralLabel>
</CustomObject>