force-app/main/default/objects/Amplifinity_AR_Status_Mapping__mdt/fields/Allow_Updates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a referral has a certain AR Status no more updates should be allowed to those records.</description>
    <label>Allow Updates</label>
    <type>Checkbox</type>
</CustomField>