force-app/main/default/objects/Amplifinity_AR_Status_Mapping__mdt/fields/AMP_Status__c.field-meta.xml
<CustomField>
    <fullName>AMP_Status__c</fullName>
    <label>AMP Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>