force-app/main/default/objects/Amplifinity_AR_Status_Mapping__mdt/fields/AR_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Status__c</fullName>
    <label>AR Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>