force-app/main/default/objects/Amplifinity_AR_Status_Mapping__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>AR_Status__c</columns>
    <columns>AMP_Status__c</columns>
    <columns>Allow_Updates__c</columns>
    <columns>IsClosedStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>